crates/test-ui/ui/msg_send_id_underspecified_error1.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_underspecified_error1.rs
  |
  |     let _: Result<Id<NSString>, _> = unsafe { msg_send_id![obj, error: _] };
  |            ^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0283]: type annotations needed
 --> ui/msg_send_id_underspecified_error1.rs
  |
  |     let _: Result<Id<NSString>, _> = unsafe { msg_send_id![obj, error: _] };
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for raw pointer `*mut _`
  |
  = note: multiple `impl`s satisfying `*mut _: RefEncode` found in the `objc2` crate:
          - impl RefEncode for *mut c_void;
          - impl<T> RefEncode for *mut T
            where T: RefEncode, T: ?Sized;
  = note: required for `*mut *mut _` to implement `Encode`
note: required by a bound in `send_message_id_error`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id_error<A, E, R>(obj: T, sel: Sel, args: A) -> Result<R, Id<E>>
  |               --------------------- required by a bound in this associated function
  |     where
  |         *mut *mut E: Encode,
  |                      ^^^^^^ required by this bound in `MsgSendId::send_message_id_error`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
